<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_undraw_access_account_re_8spm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/text_extra_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintVertical_bias="0.06999999" />

        <TextView
            android:id="@+id/textView_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:text="@string/conti"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.22000003" />


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65">


            <EditText
                android:id="@+id/et_email"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_field_background"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp" />


            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_field_background">


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="280dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp" />

                <ImageView
                    android:id="@+id/password_visible"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_visibility_off_24" />


            </LinearLayout>


            <Button
                android:id="@+id/btn_register"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserratbold"
                android:text="@string/login" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>